--- a/css/styles.css
+++ b/css/styles.css
@@ -137,6 +137,7 @@ body {
       font-style: italic;
       span {
         color: var(--purple);
+        font-variant-numeric: tabular-nums;
       }
     }
   }
