--- a/css/styles.css
+++ b/css/styles.css
@@ -63,17 +63,22 @@ body {
   padding: 3rem 1.5rem;
   border-radius: 2rem;
   border-bottom-right-radius: 4rem;
+  max-width: 700px;
+  margin-inline: auto;
 
   .calculator-form {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     gap: 0.75rem;
 
+    @media (min-width: 768px) {
+      grid-template-columns: repeat(4, 1fr);
+      row-gap: 0.25rem;
+    }
     .form-group {
       display: flex;
       flex-direction: column;
       gap: 0.25rem;
-
       label {
         font-weight: bold;
         color: var(--smokey-grey);
@@ -81,7 +86,6 @@ body {
         letter-spacing: 0.2rem;
         font-size: 0.7rem;
       }
-
       input {
         padding: 0.75rem;
         border: 1px solid var(--light-grey);
@@ -91,10 +95,13 @@ body {
       }
     }
     .submit-button {
-      padding-block: 1rem;
       grid-column: 1 / -1;
       width: 100%;
       position: relative;
+      padding-block: 1rem;
+      @media (min-width: 768px) {
+        padding-block: 0;
+      }
       hr {
         display: block;
         width: 100%;
@@ -107,7 +114,6 @@ body {
       }
       button {
         position: relative;
-        margin-inline: auto;
         width: 3.5rem;
         height: 3.5rem;
         border: none;
@@ -117,6 +123,14 @@ body {
         display: grid;
         place-items: center;
         z-index: 10;
+        margin-inline: auto;
+        @media (min-width: 768px) {
+          width: 4rem;
+          height: 4rem;
+          /* transform: scale(1.25); */
+          margin-inline: 0;
+          margin-left: auto;
+        }
         img {
           fill: var(--white);
           width: 1.5rem;
@@ -132,9 +146,12 @@ body {
     margin-top: 1rem;
     .age {
       line-height: 1;
-      font-size: 3rem;
       font-weight: bolder;
       font-style: italic;
+      font-size: 3rem;
+      @media (min-width: 768px) {
+        font-size: 4rem;
+      }
       span {
         color: var(--purple);
         font-variant-numeric: tabular-nums;
